[project]
name = "diagnostics-report-streamlit"
version = "0.1.0"
description = "Read-only Streamlit dashboard for diagnostics cohort reports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.40",
    "psycopg2-binary>=2.9",
    "pandas>=2.2",
    "python-dotenv>=1.0",
]
